--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-    <nav id="nav"></nav>
-    <main id="app" class="relative"></main>
-    <footer id=footer></footer>
+    <nav id="nav" class="w-full"></nav>
+    <main id="app" class="relative h-full mb-3"></main>
+    <footer id="footer"></footer>
 </body>
 
 </html>
