--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/normalize.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/6957f9fdd4.js" crossorigin="anonymous"></script>
 </head>
